* Allow to automatically post writeoff moves
* Allow to automatically post reconciliation moves
* Launch reconciliation wizard from party
* Allow to auto post move templates

Version 1.6 - 2015-12-23
* Differentiate money direction with field (payable/receivable) and not with sign
* New simplified party balance with colors and icons

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Allow to filter third party balance per account
* Pad fiscal years sequences

Version 1.2 - 2014-07-01
* Changelog file creation