@@ -1,3 +1,4 @@
+* Add hook to customize split moves description
 * Allow to automatically post writeoff moves
 * Allow to automatically post reconciliation moves
 * Launch reconciliation wizard from party
